added simple gui code that might be changed later

--- a/preprocess.ipynb
+++ b/preprocess.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -114,14 +114,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\mazen\\AppData\\Local\\Temp\\ipykernel_9228\\522643902.py:12: UserWarning: No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n",
+      "C:\\Users\\mazen\\AppData\\Local\\Temp\\ipykernel_5368\\522643902.py:12: UserWarning: No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n",
       "  plt.legend()\n"
      ]
     },
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,14 +183,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\mazen\\AppData\\Local\\Temp\\ipykernel_9228\\522643902.py:12: UserWarning: No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n",
+      "C:\\Users\\mazen\\AppData\\Local\\Temp\\ipykernel_5368\\522643902.py:12: UserWarning: No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n",
       "  plt.legend()\n"
      ]
     },
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,14 +272,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\mazen\\AppData\\Local\\Temp\\ipykernel_9228\\522643902.py:12: UserWarning: No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n",
+      "C:\\Users\\mazen\\AppData\\Local\\Temp\\ipykernel_5368\\522643902.py:12: UserWarning: No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n",
       "  plt.legend()\n"
      ]
     },
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,14 +359,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\mazen\\AppData\\Local\\Temp\\ipykernel_9228\\522643902.py:12: UserWarning: No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n",
+      "C:\\Users\\mazen\\AppData\\Local\\Temp\\ipykernel_5368\\522643902.py:12: UserWarning: No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n",
       "  plt.legend()\n"
      ]
     },
@@ -394,6 +394,117 @@
    "source": [
     "plot(normal_train[0],\"normal\")\n",
     "plot(lbbb_train[0],\"LBBB\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([[-5.12458327, -5.18836412, -4.7356665 , ..., -4.90925127,\n",
+       "         -5.17005204, -5.1055566 ],\n",
+       "        [-4.88481666, -4.84927607, -4.44919975, ..., -5.05053893,\n",
+       "         -5.11343101, -4.74263513],\n",
+       "        [-5.12302467, -5.09164969, -4.78962443, ..., -5.25578826,\n",
+       "         -5.16585706, -5.10712428],\n",
+       "        ...,\n",
+       "        [-5.25834647, -5.28606284, -4.92099472, ..., -5.44367652,\n",
+       "         -5.11724528, -4.98420408],\n",
+       "        [-5.2918783 , -5.3427889 , -4.96385276, ..., -5.38385652,\n",
+       "         -5.0696042 , -5.11393713],\n",
+       "        [-4.81344203, -4.68173179, -4.41389813, ..., -5.32293246,\n",
+       "         -4.90493087, -4.6865004 ]]),\n",
+       " array([[ 0.03529958, -0.12121287,  1.79413726, ...,  0.50532078,\n",
+       "          0.02902925, -0.00897185],\n",
+       "        [ 0.01486669,  0.18183911,  1.87567577, ...,  0.50724777,\n",
+       "          0.00973241,  0.06844507],\n",
+       "        [ 0.01435194,  0.16458934,  1.8452362 , ...,  0.93899872,\n",
+       "         -0.09903183,  0.08765017],\n",
+       "        ...,\n",
+       "        [ 0.03290983,  0.00547294,  2.00241366, ...,  0.29486756,\n",
+       "          0.02992223,  0.00437303],\n",
+       "        [ 0.03314834, -0.0802998 ,  1.85637666, ...,  0.35703239,\n",
+       "          0.09895825, -0.08464726],\n",
+       "        [-0.01518378,  0.44130006,  1.86161582, ...,  0.36939713,\n",
+       "          0.07502663, -0.01259994]]),\n",
+       " array([[ 0.01601819, -0.16211963,  0.3937653 , ...,  0.05612667,\n",
+       "         -0.00645945,  0.03529044],\n",
+       "        [ 0.00278421, -0.08138969,  0.38649742, ...,  0.03607113,\n",
+       "          0.02738008,  0.03577719],\n",
+       "        [ 0.00236621, -0.07963594,  0.37982969, ..., -0.05523344,\n",
+       "          0.03208475,  0.08729347],\n",
+       "        ...,\n",
+       "        [ 0.01597011, -0.14771461,  0.34002398, ...,  0.07276925,\n",
+       "          0.00334903, -0.01999485],\n",
+       "        [ 0.01826422, -0.14157604,  0.34376483, ...,  0.10225102,\n",
+       "         -0.03746986,  0.00601241],\n",
+       "        [-0.00925461,  0.06190904,  0.35673193, ...,  0.06593434,\n",
+       "         -0.00705894,  0.02152914]]),\n",
+       " array([[-0.00031552, -0.09866565, -0.00454941, ...,  0.00884369,\n",
+       "          0.02060849, -0.023004  ],\n",
+       "        [-0.00070594, -0.01930435, -0.07258853, ...,  0.02471263,\n",
+       "          0.01184145, -0.00092096],\n",
+       "        [-0.00025822, -0.01527521, -0.04186739, ..., -0.00175437,\n",
+       "          0.03234605, -0.02073404],\n",
+       "        ...,\n",
+       "        [ 0.00295014, -0.08756525, -0.04089692, ...,  0.00331784,\n",
+       "         -0.04374043,  0.03737933],\n",
+       "        [ 0.00326623, -0.10050045, -0.03178213, ..., -0.01787234,\n",
+       "          0.00359032, -0.02058164],\n",
+       "        [ 0.00367746,  0.06857158, -0.0543062 , ...,  0.03544227,\n",
+       "          0.00905659, -0.01277217]]),\n",
+       " array([[-0.00230701, -0.00571193, -0.00298217, ...,  0.01882373,\n",
+       "         -0.00980999, -0.00356038],\n",
+       "        [-0.00076273,  0.00177812,  0.00200282, ...,  0.01199233,\n",
+       "         -0.00019523, -0.00289349],\n",
+       "        [-0.00058736, -0.00037008, -0.00410943, ...,  0.0170277 ,\n",
+       "         -0.00909037,  0.00025064],\n",
+       "        ...,\n",
+       "        [-0.00237262, -0.02583131, -0.00754886, ..., -0.03727998,\n",
+       "          0.01597761,  0.00526573],\n",
+       "        [-0.00202219, -0.02659798, -0.00466791, ...,  0.00342718,\n",
+       "         -0.00889806, -0.00149909],\n",
+       "        [ 0.00072626, -0.02000847,  0.01879914, ..., -0.01064599,\n",
+       "         -0.0069098 ,  0.01840221]]),\n",
+       " array([[ 5.62739036e-04,  1.59222090e-02, -1.82471998e-02, ...,\n",
+       "          5.84539943e-03, -4.99424421e-03, -4.16632202e-03],\n",
+       "        [-2.89035005e-05,  4.55274123e-03, -7.55503229e-03, ...,\n",
+       "         -2.70307853e-05,  4.58377731e-04, -1.55515662e-03],\n",
+       "        [ 4.32166979e-05,  3.72263334e-03,  6.15104302e-04, ...,\n",
+       "          8.15395910e-03, -5.16882071e-03, -4.24513982e-03],\n",
+       "        ...,\n",
+       "        [ 5.37178036e-04,  1.62374348e-02, -2.57077587e-02, ...,\n",
+       "         -1.35672558e-02,  7.98714354e-03,  1.00226705e-02],\n",
+       "        [ 8.04586865e-04,  1.49867442e-02, -2.14295690e-02, ...,\n",
+       "          7.44598494e-03, -4.74281993e-03, -4.67443171e-03],\n",
+       "        [-6.27265093e-04, -6.50198526e-03,  5.66799664e-03, ...,\n",
+       "          4.37056411e-04, -7.94743112e-03,  1.21185150e-02]]),\n",
+       " array([[ 0.00250612,  0.00486418, -0.00124786, ...,  0.00076222,\n",
+       "         -0.00217659, -0.0001079 ],\n",
+       "        [ 0.00015384,  0.00068526,  0.00088749, ..., -0.00050356,\n",
+       "         -0.00017769,  0.00053516],\n",
+       "        [ 0.00047679,  0.00131451, -0.00074396, ...,  0.00034404,\n",
+       "         -0.00138777, -0.00078038],\n",
+       "        ...,\n",
+       "        [ 0.00241843,  0.00472976, -0.00122739, ...,  0.00119259,\n",
+       "          0.00189351,  0.00097398],\n",
+       "        [ 0.00308563,  0.00530809, -0.00268537, ...,  0.00030056,\n",
+       "         -0.00172362, -0.00027692],\n",
+       "        [-0.00169504, -0.00178677, -0.00033604, ...,  0.00373386,\n",
+       "          0.00112868, -0.0059721 ]])]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result=pywt.wavedec(normal_train,\"db2\")\n",
+    "result"
    ]
   }
  ],
