--- a/preprocess.ipynb
+++ b/preprocess.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# `importing libearies and reading data `"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -105,7 +112,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/zs/rk4812cx3dncd75_l5bpgfcc0000gn/T/ipykernel_38325/522643902.py:12: UserWarning: No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n",
+      "/var/folders/zs/rk4812cx3dncd75_l5bpgfcc0000gn/T/ipykernel_42341/522643902.py:12: UserWarning: No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n",
       "  plt.legend()\n"
      ]
     },
@@ -133,6 +140,20 @@
    "source": [
     "plot(normal_train[0],\"normal\")\n",
     "plot(lbbb_train[0],\"LBBB\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# `data preprocessing`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## removing mean"
    ]
   },
   {
@@ -174,7 +195,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/zs/rk4812cx3dncd75_l5bpgfcc0000gn/T/ipykernel_38325/522643902.py:12: UserWarning: No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n",
+      "/var/folders/zs/rk4812cx3dncd75_l5bpgfcc0000gn/T/ipykernel_42341/522643902.py:12: UserWarning: No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n",
       "  plt.legend()\n"
      ]
     },
@@ -202,6 +223,13 @@
    "source": [
     "plot(normal_train[0],\"normal\")\n",
     "plot(lbbb_train[0],\"LBBB\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## applying bandbass filtter"
    ]
   },
   {
@@ -252,7 +280,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/zs/rk4812cx3dncd75_l5bpgfcc0000gn/T/ipykernel_38325/522643902.py:12: UserWarning: No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n",
+      "/var/folders/zs/rk4812cx3dncd75_l5bpgfcc0000gn/T/ipykernel_42341/522643902.py:12: UserWarning: No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n",
       "  plt.legend()\n"
      ]
     },
@@ -280,6 +308,13 @@
    "source": [
     "plot(normal_train[0],\"normal\")\n",
     "plot(lbbb_train[0],\"LBBB\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## normalizing the data"
    ]
   },
   {
@@ -339,7 +374,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/zs/rk4812cx3dncd75_l5bpgfcc0000gn/T/ipykernel_38325/522643902.py:12: UserWarning: No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n",
+      "/var/folders/zs/rk4812cx3dncd75_l5bpgfcc0000gn/T/ipykernel_42341/522643902.py:12: UserWarning: No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n",
       "  plt.legend()\n"
      ]
     },
@@ -367,6 +402,13 @@
    "source": [
     "plot(normal_train[0],\"normal\")\n",
     "plot(lbbb_train[0],\"LBBB\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## applying wavelet"
    ]
   },
   {
@@ -408,6 +450,13 @@
     "    test_coeff=pywt.wavedec(test[i],wavelet=WAVELET_FAMILY,level=LEVEL)\n",
     "    app=test_coeff[0]\n",
     "    test_app.append(app)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## transforming data to statstical features"
    ]
   },
   {
@@ -504,6 +553,13 @@
    ],
    "source": [
     "statistics_df.duplicated().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# `modeling`"
    ]
   },
   {
